# personal_site

./: .dockerignore  .gitignore  .gitmodules  .prettierignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  fly.toml  manage.py  pyproject.toml  requirements.txt  styles.css  todos.md
assets/: posts.json  rendered.html
assets/templates/: base.html
blog/: Cargo.toml  mdconvert.py  models.py  urls.py  views.py
blog/assets/content/: bald.md
blog/assets/pages/posts/: bald.html
blog/assets/templates/: base.html
blog/migrations/: 0001_initial.py
blog/src/: blog.rs  main.rs
blog/templates/blog/: base.html  main_index_template.html  posts_index_template.html
common/src/: lib.rs
core/: urls.py  views.py
core/templates/core/: about.html  index.html  n.html
make-static/: Cargo.toml
make-static/test-assets/: llipsum.md
md-render/: Cargo.toml
md-render/src/: lib.rs
md-render/web/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
md-render/web/_build/: index.js
md-render/web/src/: App.svelte  index.ts  main.ts
md-render/web/src/lib/: Counter.svelte  Editor.svelte
md-transform/: Cargo.toml
md-transform/src/: main.rs
md-wasm/: bootstrap.js  package.json  tsconfig.json
personal_site/: settings.py  urls.py
polls/: admin.py  models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/static/polls/: style.css.map  style.scss
polls/static/polls/.sass-cache/744d789437293c0d180ba1e341142a63af75b947/: style.scssc
polls/templates/polls/: index.html  results.html
resume/: __init__.py  apps.py  models.py  urls.py  views.py
resume/static/: style.css
resume/static/resume/: style.css
resume/templates/resume/: resume.html  resume_template.html
server/: Cargo.toml
server/assets/: index.html
server/assets/templates/: base.html  posts_list.html
server/src/: blog.rs  main.rs  md.rs
src/: blog.rs  main.rs  md.rs  render.rs
static/core/styles/: styles.css  styles.scss
static/css/: index-page-base.css
static/resume/: resume.json  styles.css  styles.scss
static/resume/.sass-cache/6fdf5251c4475ff2eb8cfc0f0427636ac845f089/: styles.scssc
static_files/css/: layout.css
static_files/polls/: style.css
templates/: base.html  post.html
templates/admin/: base_site.html
tide_server/: Cargo.toml
tide_server/assets/: posts.json
tide_server/assets/css/: style.css
tide_server/assets/pages/: about.html
tide_server/assets/static/: homepage.html
tide_server/assets/templates/: posts_list.html
tide_server/migrations/: 0001_posts_table.sql
tide_server/src/: main.rs
warp_server/: Cargo.toml
warp_server/assets/posts/md/: bald.md  sidenote.md
warp_server/src/: main.rs
