[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "full"] }
chrono = "0.4.28"
rusqlite = "0.29.0"
anyhow = { version = "1.0.75", features = ["backtrace"]}
handlebars = "4.4.0"
serde_json = "1.0.106"
axum = { version = "0.6.20", features = ["multipart", "headers"]}
async-std = { version = "1", features = ["attributes", "tokio1"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["full"]}
tracing-subscriber = "0.3.17"
tracing = "0.1"
markup5ever_rcdom = "0.2.0"
scraper = "0.17.1"
markdown = "1.0.0-alpha.13"
html5ever = "0.26.0"
regex = "1.9.5"
tracing-error = "0.2.0"
dotenv_codegen = "0.15.0"
sha3 = "0.9"
hex = "0.4.3"
base64 = "0.21.4"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
bzip2 = "0.4.4"
