[tool.poetry]
name = "personal_site"
version = "0.1.0"
description = "my website"
authors = ["keagud <keagud@protonmail.com>"]
license = "0BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.1"
django-debug-toolbar = "^4.1.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.265"
black = "^23.3.0"
libsass = "^0.22.0"
mypy = "^1.3.0"
django-stubs = "^4.2.0"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
[tool.django-stubs]
django_settings_module = "personal_site.settings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
