[package]
name = "md-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
anyhow = "1.0.75"
handlebars = "4.4.0"
wasm-bindgen = { version = "0.2.87", features = ["serde", "serde_json"]}
regex = "1.9.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.106"
markdown = "1.0.0-alpha.13"
