[package]
name = "md-transform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
handlebars = "4.4.0"
html5ever = "0.26.0"
markdown = "1.0.0-alpha.13"
markup5ever_rcdom = "0.2.0"
regex = "1.9.5"
scraper = "0.17.1"
