[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "full"] }
chrono = "0.4.28"
rusqlite = "0.29.0"
anyhow = "1.0.75"
handlebars = "4.4.0"
serde_json = "1.0.106"
axum = "0.6.20"
async-std = { version = "1", features = ["attributes", "tokio1"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["full"]}
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
