[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.10.0"
tokio = { version = "1.0", features = ["macros", "full"] }
anyhow = { version = "1.0.75", features = ["backtrace"]}
axum = { version = "0.6.20", features = ["multipart", "headers"]}
async-std = { version = "1", features = ["attributes", "tokio1"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["full"]}
tracing-subscriber = "0.3.17"
tracing = "0.1"
regex = "1.9.5"
tracing-error = "0.2.0"
sha3 = "0.9"
hex = "0.4.3"
base64 = "0.21.4"
bzip2 = "0.4.4"
axum-macros = "0.3.8"
axum-auth = "0.4.0"
const_format = "0.2.31"
serde_derive = "1.0.188"
sqlx = { version = "0.7.2" , features = ["sqlite", "runtime-tokio", "tls-rustls", "macros"] }
dotenvy = "0.15.7"
serde = { version = "1.0.188", features = ["serde_derive"]}
chrono = "0.4.31"
md-render = {path = "../md-render/"}
handlebars = "4.4.0"
serde_json = "1.0.107"
common = {path = "../common/"}
