[package]
name = "tide_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.2" , features = ["sqlite", "runtime-async-std", "tls-rustls", "macros"] }
anyhow = "1.0.75"
base64 = "0.21.4"
dotenvy = "0.15.7"
serde = { version = "1.0.188", features = ["serde_derive"]}
chrono = "0.4.31"
md-render = {path = "../md-render/"}
handlebars = "4.4.0"
serde_json = "1.0.107"
common = {path = "../common/"}
tide = "0.16.0"
